--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,12 @@ body * {
 
 #container {
   width: 360px;
-  margin: auto auto 0px;
-
+  margin: 56px auto 0px;
+  padding: 0 24px;
 }
 #profile {
  text-align: center;
  padding: 24px;
-
 }
 
 #profile img{
@@ -31,4 +30,72 @@ body * {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
+}
+
+/* links */
+
+ul {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  padding: 24px 0;
+}
+ul li a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+  padding: 16px 24px;
+
+  background: rgba(255,255,255,0.1);
+  border: 1px solid rgba(255,255,255,0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+
+  transition: background 0.2s;
+}
+
+ul li a:hover {
+  background: rgba(255,255,255,0.05);
+  border: 1.5px solid white;
+}
+
+/* social links */
+
+#social-links {
+  display:flex ;
+  justify-content: center;
+
+  padding: 24px 0;
+
+  font-size: 24px;
+}
+
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+
+  transition: background 0.2s;
+  border-radius: 50%;
+}
+
+#social-links a:hover {
+  background: rgba(255,255,255,0.2);
+  padding: 16px;
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
 }
