Css finalizado e adicionando interação ao projeto
Duas pages cridas com variaveis no css puro.

Signed-off-by: Gabriel Evangelista <129545790+gabrielevanger@users.noreply.github.com>

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,31 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: white;
+  --bg-url: url(./assets/bg-mobile.jpg);
+  --stroker-color: rgba(255,255,255,0.5);
+  --surface-color: rgba(255,255,255,0.05);
+  --surface-color-hover: rgba(0,0,0,0.02);
+  --highlight-color: rgba(255,255,255,0.2);
+  --switch-bg-url: url(./assets/MoonStars.svg) ;
+}
+.light {
+  --text-color: black;
+  --bg-url: url(./assets/bg-mobile-light\ 2x.jpg);
+  --stroker-color: rgba(0,0,0,0.5);
+  --surface-color: rgba(0,0,0,0.05);
+  --surface-color-hover: rgba(0,0,0,0.02);
+  --highlight-color: rgba(0,0,0,0.1);
+  --switch-bg-url: url(./assets/Sun.svg) ;
+}
+
 body{
-  background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center/cover;
 }
 body * {
   font-family:  'Inter', sans-serif;
-  color: white;
+  color: var(--text-color);
 }
 
 #container {
@@ -17,6 +36,7 @@ body * {
   margin: 56px auto 0px;
   padding: 0 24px;
 }
+/* profile */
 #profile {
  text-align: center;
  padding: 24px;
@@ -31,7 +51,44 @@ body * {
   line-height: 24px;
   margin-top: 8px;
 }
+/* switch */
+#switch {
+  position: relative;
+  width: 64px;
 
+  margin: 4px auto;
+}
+
+#switch button {
+  width: 32px;
+  height: 32px;
+  background: white var(--switch-bg-url) no-repeat center;
+  border: 0;
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+
+.light #switch button{
+  right: 0;
+  left: initial;
+}
+
+#switch span {
+  display: block;
+  width: 62px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroker-color);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
+
+}
 /* links */
 
 ul {
@@ -50,8 +107,8 @@ ul li a{
  
   padding: 16px 24px;
 
-  background: rgba(255,255,255,0.1);
-  border: 1px solid rgba(255,255,255,0.5);
+  background: var(--surface-color);
+  border: 1px solid var(--stroker-color);
   border-radius: 8px;
 
   backdrop-filter: blur(4px);
@@ -64,8 +121,8 @@ ul li a{
 }
 
 ul li a:hover {
-  background: rgba(255,255,255,0.05);
-  border: 1.5px solid white;
+  background: var(--surface-color-hover);
+  border: 1.5px solid var(--text-color);
 }
 
 /* social links */
@@ -90,7 +147,7 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-  background: rgba(255,255,255,0.2);
+  background: var(--highlight-color);
   padding: 16px;
 }
 
@@ -98,5 +155,4 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
-  
 }
